# fuzzy-reconciler

./: .gitignore  .vercelignore  BEADS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  vercel.json
.beads/: fuzzy-reconciler-mvp-plan.json  interactions.jsonl  issues.jsonl  metadata.json
api/: index.py
docs/: TEST-REPORT-IMPORT-COMPARE.md  VERCEL.md
features/: fuzzy-reconciler.feature
fixtures/: ground_truth.json  small_demo.json
fixtures/imports/: header_only.csv  manifest.json  source_a.jsonl  source_a_alias.csv  source_a_bom.csv  source_a_standard.json  source_b.geojson  source_b.jsonl  source_b_ops.tsv  source_b_standard.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: DetailPanel.svelte  ResultsMap.svelte  SourceIngestCard.svelte  api.js  inventory.js  ledger.js  session.js
openspec/specs/fuzzy-reconciler/: spec.md
scripts/: capture-screenshots.mjs  generate_import_samples.py  generate_sample_data.py
src/fuzzy_reconciler/: __init__.py  ingest.py  models.py  presets.py
src/fuzzy_reconciler/api/: app.py
src/fuzzy_reconciler/matching/: __init__.py  engine.py  geo.py  scoring.py
tests/: test_api.py  test_api_robustness.py  test_engine.py  test_ingest.py
