[project]
name = "fuzzy-reconciler"
version = "0.1.0"
description = "Fuzzy comparison service for entity lists with temporal and spatial matching"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pandas>=2.2.0",
    "rapidfuzz>=3.9.0",
    "python-dateutil>=2.9.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-bdd>=7.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fuzzy_reconciler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
